--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --config build/webpack.config.js",
+    "start": "webpack-dev-server --open --config build/webpack.config.js",
+    "dev": "npm start",
+    "server": "nodemon ./server/index.js"
   },
-  "author": "",
+  "author": "KevinTang",
   "license": "ISC",
   "dependencies": {
     "invariant": "^2.2.4",
@@ -15,12 +18,26 @@
     "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
     "log4js": "^2.8.0",
-    "shelljs": "^0.8.2"
+    "qrcode": "^1.2.0",
+    "shelljs": "^0.8.2",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "html-withimg-loader": "^0.1.16",
+    "nodemon": "^1.17.5",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.0.1",
-    "webpack-cli": "^3.0.4"
+    "webpack-cli": "^3.0.4",
+    "webpack-dev-server": "^3.1.4"
   }
 }
